Fix for repaymentPlan undefined error

--- a/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
+++ b/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
@@ -5,13 +5,15 @@
     <h2 class="heading-medium">{{ t(heading) }}</h2>
   {% endif %}
 
-  {{ paymentPlanTable(
+  {% if repaymentPlan %}
+    {{ paymentPlanTable(
     id = 'payment-table',
     instalmentAmount = repaymentPlan.instalmentAmount,
     paymentSchedule = repaymentPlan.paymentSchedule,
     firstPaymentDate = repaymentPlan.firstPaymentDate,
     completionDate = repaymentPlan.completionDate,
     paymentLength = repaymentPlan.paymentLength
-  )
-  }}
+    )
+    }}
+  {% endif %}
 {% endmacro %}
