Update template to check for court order payment plan

--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -20,13 +20,15 @@
               courtOrderFrequency: courtOrderPaymentPlan.paymentSchedule | renderPaymentSchedule
             }) }}</p>
 
-          {{
-          repaymentPlanBlock(
+          {% if courtOrderPaymentPlan %}
+            {{
+            repaymentPlanBlock(
             heading = '',
             repaymentPlan = courtOrderPaymentPlan
-          )
-          }}
-          
+            )
+            }}
+          {% endif %}
+
         {% else %}
           <p> {{ t('The court has accepted your repayment plan.') }} </p>
         {% endif %}
