using totalAmount which is already available from controller

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -81,22 +81,14 @@
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
       {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
-        {% set amountToPay = 'the full amount' %}
-        {% if claim.response.responseType == ResponseType.PART_ADMISSION.value %}
-          {% set amountToPay = claim.response.amount | numeral %}
-        {% endif %}
-        {{ row('The agreement', t('{{ defendantFullName }} will pay ' + amountToPay + ', immediately.
+        {{ row('The agreement', t('{{ defendantFullName }} will pay {{ totalAmount }}, immediately.
         {{ defendantFullName }} will receive the moment no later than {{ paymentDate }}.
         Any cheques or transfers will be clear in {{ defendantFullName }} account by this date.',
-          { defendantFullName: claim.response.defendant.name, paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date }
+          { defendantFullName: claim.response.defendant.name, paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date ,
+          totalAmount: totalAmount | numeral}
         )) }}
         {{ row('Completion date', draft.courtOfferedPaymentIntention.paymentDate | date) }}
       {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
-        {% set amountToPay = 'the full amount' %}
-        {% if claim.response.responseType == ResponseType.PART_ADMISSION.value %}
-          {% set amountToPay = claim.response.amount | numeral %}
-        {% endif %}
-
         {{ row(label = 'The offer',
           value = t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
             {
