--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -62,7 +62,7 @@
           <a href="{{ DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }}">
              {{ t('complete a directions questionnaire form ')}}</a> {{ t('to tell us more about the claim.')}}
         </p>
-        <p>{{ t('Your claim wont proceed if you dont complete and return the form before ') + claim.responseDeadline | date + '.' }}</p>
+        <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ responseDeadline }}.', { responseDeadline: claim.responseDeadline | date }) }}</p>
       {% endif %}
 
       {% include "includes/service_survey_link.njk" %}
