Dashboard statuses admissionByCCJClaimant, offerSettlement and settlementAgreementClaiamnt linked to money received page

--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJClaimant.njk
@@ -11,5 +11,5 @@
       { defendantName: claim.claimData.defendant.name }) }}</p>
   <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
   <p> {{ t('When you’ve been paid in full, you need to let us know.') }} </p>
-  <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
+  <a href="{{ DashboardPaths.datePaidPage.evaluateUri({ externalId: claim.externalId }) }}" class="button button-secondary">Tell us you've been paid</a>
 {% endmacro %}
