--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -52,5 +52,5 @@
   <p>{{ t('The agreement explains what you can do if the defendant breaks the terms.') }}</p>
   <p>{{ downloadAgreementLink(claim, 'Download the settlement agreement') }}</p>
   <p>{{ t('When you’ve been paid in full, you need to let us know.') }}</p>
-  <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
+  <a href="{{ DashboardPaths.datePaidPage.evaluateUri({ externalId: claim.externalId }) }}" class="button button-secondary">Tell us you've been paid</a>
 {% endmacro %}
