corrected macro to get claimantName

--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -17,7 +17,7 @@
 
         {{ termsOfAgreement (
           id = 'termsOfAgreement',
-          response = claim.response,
+          claim = claim,
           paymentIntention = paymentIntention,
           totalAmount = totalAmount
         ) }}
