--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -82,9 +82,11 @@
 
       {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
         {{ row('The agreement', t('{{ defendantFullName }} will pay {{ totalAmount }}, immediately.
-        {{ defendantFullName }} will receive the moment no later than {{ paymentDate }}.
+        {{ claimantName }} will receive the moment no later than {{ paymentDate }}.
         Any cheques or transfers will be clear in {{ defendantFullName }} account by this date.',
-          { defendantFullName: claim.response.defendant.name, paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date ,
+          { defendantFullName: claim.response.defendant.name,
+            claimantName: claim.claimData.claimant.name,
+            paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date ,
           totalAmount: totalAmount | numeral}
         )) }}
         {{ row('Completion date', draft.courtOfferedPaymentIntention.paymentDate | date) }}
