--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -2,6 +2,7 @@
 
 {% from "table.njk" import tableStart, tableEnd, row, rowWithMultipleValue %}
 {% from "form.njk" import csrfProtection, submitButton, errorSummary %}
+{% from "./macro/termsOfAgreementTable.njk" import termsOfAgreement %}
 
 {% set heading = 'Check your answers' %}
 
@@ -80,45 +81,12 @@
     {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
-      {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
-        {{ row('The agreement', t('{{ defendantFullName }} will pay {{ totalAmount }}, immediately.
-        {{ claimantName }} will receive the moment no later than {{ paymentDate }}.
-        Any cheques or transfers will be clear in {{ defendantFullName }} account by this date.',
-          { defendantFullName: claim.response.defendant.name,
-            claimantName: claim.claimData.claimant.name,
-            paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date ,
-          totalAmount: totalAmount | numeral}
-        )) }}
-        {{ row('Completion date', draft.courtOfferedPaymentIntention.paymentDate | date) }}
-      {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
-        {{ row(label = 'The offer',
-          value = t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
-            {
-              defendantFullName: claim.response.defendant.name,
-              paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date
-            }
-          ),
-          bottomBorder = true, bold = true
-        ) }}
-        {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.paymentDate | date,
-          bottomBorder = true, bold = true
-        ) }}
-      {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
-        {{ row(label = 'The offer',
-          value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
-            { defendantFullName: claim.response.defendant.name,
-              instalmentAmount: draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
-              paymentSchedule: draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-              firstPaymentDate: draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date
-            }),
-          bottomBorder = true, bold = true
-        ) }}
-        {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.repaymentPlan.completionDate | date,
-          bottomBorder = true, bold = true
-        ) }}
-      {% endif %}
+      {{ termsOfAgreement (
+        id = 'termsOfAgreement',
+        claim = claim,
+        paymentIntention = paymentIntention,
+        totalAmount = totalAmount
+      ) }}
 
       {{ tableEnd() }}
     {% endif %}
