--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -8,7 +8,7 @@
 
 {% from "form.njk" import csrfProtection, submitButton, errorSummary %}
 {% from "./macro/repaymentPlanBlock.njk" import repaymentPlanBlock %}
-{% from "financialDetails.njk" import financialDetailsTable %}
+{% from "financialDetails.njk" import financialDetailsTable, financialDetailsBlock %}
 
 {% set defendantName = claim.claimData.defendant.name %}
 
@@ -78,6 +78,7 @@
         {% endif %}
 
         {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+        {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
 
       {% endif %}
 
@@ -100,7 +101,9 @@
 
           {% if claim.response.timeline and claim.response.timeline.rows.length > 0 %}
             <h3 class="heading-small form-group-related">{{ t('Their timeline of events') }}</h3>
-            {{ timelineFragment(claim.response.timeline) }}
+            <div class="form-group">
+              {{ timelineFragment(claim.response.timeline) }}
+            </div>
           {% endif %}
 
           {% if claim.response.evidence and claim.response.evidence.comment %}
@@ -125,6 +128,7 @@
           {% endif %}
 
           {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+          {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
 
         {% endif %}
       {% endif %}
