--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -81,23 +81,28 @@
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
       {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
-        {{ row('The agreement', t('{{ defendantFullName }} will pay {{ totalAmount }} immediately.
+        {{ row(label = 'The agreement',
+          value = t('{{ defendantFullName }} will pay {{ totalAmount }} immediately.
         {{ claimantName }} will receive the moment no later than {{ paymentDate }}.
         Any cheques or transfers will be clear in {{ defendantFullName }} account by this date.',
           { defendantFullName: claim.response.defendant.name,
             claimantName: claim.claimData.claimant.name,
             paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date ,
-          totalAmount: totalAmount | numeral}
-        )) }}
-        {{ row('Completion date', draft.courtOfferedPaymentIntention.paymentDate | date) }}
+            totalAmount: totalAmount | numeral}),
+          bottomBorder = true, bold = true,
+          changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
+        ) }}
+        {{ row(label = 'Completion date',
+          value = draft.courtOfferedPaymentIntention.paymentDate | date,
+          bottomBorder = true, bold = true)
+        }}
       {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
         {{ row(label = 'The agreement',
           value = t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
             {
               defendantFullName: claim.response.defendant.name,
               paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date
-            }
-          ),
+            }),
           bottomBorder = true, bold = true
         ) }}
         {{ row(label = 'Completion date',
