--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -16,18 +16,18 @@
         {% set settleAdmittedResponse = 'I accept this amount' %}
       {% else %}
         {% set settleAdmittedResponse = 'I reject this amount' %}
-          {% if draft.freeMediation.option === 'yes' %}
-            {% set freeMediationResponse =  'Yes' %}
-          {% else %}
-            {% set freeMediationResponse = 'No' %}
-          {% endif %}
+        {% if draft.freeMediation.option === 'yes' %}
+          {% set freeMediationResponse =  'Yes' %}
+        {% else %}
+          {% set freeMediationResponse = 'No' %}
+        {% endif %}
       {% endif %}
 
       {{ row(label = 'Do you accept or reject the defendant’s admission?', bold = true, value = settleAdmittedResponse,
-        changeLink = ClaimantResponsePaths.settleAdmittedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      changeLink = ClaimantResponsePaths.settleAdmittedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
       {% if draft.settleAdmitted.admitted.option === 'no' and claim.response.freeMediation === 'yes' %}
         {{ row(label = 'Will you try free mediation?', bold = true, value = freeMediationResponse,
-          changeLink = ClaimantResponsePaths.freeMediationPage.evaluateUri({ externalId: draft.externalId }), bottomBorder = true) }}
+        changeLink = ClaimantResponsePaths.freeMediationPage.evaluateUri({ externalId: draft.externalId }), bottomBorder = true) }}
       {% endif %}
     {% endif %}
 
@@ -39,28 +39,30 @@
       {% endif %}
 
       {{ row(label = 'Do you accept the defendant’s repayment plan?', bold = true, value = acceptPaymentMethodResponse,
-        changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
 
       {% if draft.acceptPaymentMethod.accept.option === 'no' %}
-        {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
+
+        {% if paymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
           {% set alternatePaymentMethodResponse = t('Immediately') %}
-        {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
-          {% set alternatePaymentMethodResponse = t('In full by {{ deadline }}', { deadline: draft.courtOfferedPaymentIntention.paymentDate | date }) %}
-        {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
+        {% elseif paymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
+          {% set alternatePaymentMethodResponse = t('In full by {{ deadline }}', { deadline: paymentIntention.paymentDate | date }) %}
+        {% elseif paymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
           {% set alternatePaymentMethodResponse = t('By instalments') %}
         {% endif %}
 
         {{ row(label = 'How would you like the defendant to pay?', bold = true, value = alternatePaymentMethodResponse,
-          changeLink = ClaimantResponsePaths.alternateRepaymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+        changeLink = ClaimantResponsePaths.alternateRepaymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
 
-        {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
-          {{ row(label = 'Regular payments of', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
-            changeLink = ClaimantResponsePaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false) }}
-          {{ row(label = 'Frequency of payments', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-            bottomBorder = false) }}
-          {{ row(label = 'Date for first instalment', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date,
-            bottomBorder = true) }}
+        {% if paymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
+          {{ row(label = 'Regular payments of', bold = true, value = paymentIntention.repaymentPlan.instalmentAmount | numeral,
+          changeLink = ClaimantResponsePaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false) }}
+          {{ row(label = 'Frequency of payments', bold = true, value = paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+          bottomBorder = false) }}
+          {{ row(label = 'Date for first instalment', bold = true, value = paymentIntention.repaymentPlan.firstPaymentDate | date,
+          bottomBorder = true) }}
         {% endif %}
+
       {% endif %}
     {% endif %}
 
@@ -68,16 +70,16 @@
 
     {% if draft.formaliseRepaymentPlan %}
       {{ tableStart('howYouWantToProceed', 'How you wish to proceed') }}
-        {{ row(
-          label = 'How do you want to formalise the repayment plan?',
-          bold = true,
-          value = draft.formaliseRepaymentPlan.option | renderFormaliseRepaymentPlanOption,
-          changeLink = ClaimantResponsePaths.chooseHowToProceedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
-        ) }}
+      {{ row(
+      label = 'How do you want to formalise the repayment plan?',
+      bold = true,
+      value = draft.formaliseRepaymentPlan.option | renderFormaliseRepaymentPlanOption,
+      changeLink = ClaimantResponsePaths.chooseHowToProceedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
+      ) }}
       {{ tableEnd() }}
     {% endif %}
 
-    {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
+    {% if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
       {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
@@ -87,48 +89,48 @@
         {% endif %}
 
         {{ row(label = 'The offer',
-          value = t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
-            {
-              defendantFullName: claim.response.defendant.name,
-              paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date
-            }
-          ),
-          bottomBorder = true, bold = true
+        value = t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
+        {
+          defendantFullName: claim.response.defendant.name,
+          paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date
+        }
+        ),
+        bottomBorder = true, bold = true
         ) }}
         {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.paymentDate | date,
-          bottomBorder = true, bold = true
+        value = draft.courtOfferedPaymentIntention.paymentDate | date,
+        bottomBorder = true, bold = true
         ) }}
       {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
         {{ row(label = 'The offer',
-          value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
-            { defendantFullName: claim.response.defendant.name,
-              instalmentAmount: draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
-              paymentSchedule: draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-              firstPaymentDate: draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date
-            }),
-          bottomBorder = true, bold = true
+        value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
+        { defendantFullName: claim.response.defendant.name,
+          instalmentAmount: draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
+          paymentSchedule: draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+          firstPaymentDate: draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date
+        }),
+        bottomBorder = true, bold = true
         ) }}
         {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.repaymentPlan.completionDate | date,
-          bottomBorder = true, bold = true
+        value = draft.courtOfferedPaymentIntention.repaymentPlan.completionDate | date,
+        bottomBorder = true, bold = true
         ) }}
       {% endif %}
 
       {{ tableEnd() }}
     {% endif %}
 
-    {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value %}
+    {% if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value %}
       {{ tableStart('judgmentRequest', 'Judgment request') }}
 
-        {{ row('Has the defendant paid some of the amount owed?',
-        draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = not draft.paidAmount.amount, bold = true) }}
+      {{ row('Has the defendant paid some of the amount owed?',
+      draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = not draft.paidAmount.amount, bold = true) }}
 
-        {% if draft.paidAmount.amount %}
-          {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = true, bold = true) }}
-        {% endif %}
+      {% if draft.paidAmount.amount %}
+        {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = true, bold = true) }}
+      {% endif %}
 
-        {{ row('Total to be paid by defendant', (totalAmount - (draft.paidAmount.amount or 0)) | numeral,bold = true) }}
+      {{ row('Total to be paid by defendant', (totalAmount - (draft.paidAmount.amount or 0)) | numeral,bold = true) }}
 
       {{ tableEnd() }}
     {% endif %}
