--- a/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
+++ b/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
@@ -7,7 +7,7 @@
     {% if paymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
       {{ row('The agreement', t('{{ defendantFullName }} will pay {{ totalAmount }} immediately.
       {{ claimantName }} will receive the money no later than {{ paymentDate }}.
-      Any cheques or transfers will be clear in {{ defendantFullName }} account by this date.',
+      Any cheques or transfers will be clear in {{ defendantFullName }}’s account by this date.',
         { defendantFullName: claim.response.defendant.name,
           claimantName: claim.claimData.claimant.name,
           paymentDate: paymentIntention.paymentDate | date,
