--- a/src/main/features/ccj/views/redetermination.njk
+++ b/src/main/features/ccj/views/redetermination.njk
@@ -2,7 +2,7 @@
 
 {% set heading = 'Why do you believe the defendant can repay you sooner?' %}
 
-{% from "form.njk" import saveAndContinueButton, csrfProtection, radioGroup, errorSummary, textArea %}
+{% from "form.njk" import saveAndContinueButton, csrfProtection, errorSummary, textArea %}
 
 {% block content %}
   <div class="column-two-thirds">
