--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -80,49 +80,49 @@
     {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
-      {% if draft.courtOfferedPaymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
+      {% if paymentIntention.paymentOption === PaymentType.IMMEDIATELY.value %}
         {{ row(label = 'The agreement',
           value = t('{{ defendantFullName }} will pay {{ totalAmount }} immediately.
         {{ claimantName }} will receive the money no later than {{ paymentDate }}.
         Any cheques or transfers will be clear in {{ defendantFullName }}’s account by this date.',
           { defendantFullName: claim.response.defendant.name,
             claimantName: claim.claimData.claimant.name,
-            paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date ,
+            paymentDate: paymentIntention.paymentDate | date ,
             totalAmount: totalAmount | numeral}),
           bottomBorder = true, bold = true,
           changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
         ) }}
         {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.paymentDate | date,
+          value = paymentIntention.paymentDate | date,
           bottomBorder = true, bold = true)
         }}
-      {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
+      {% elseif paymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
         {{ row(label = 'The agreement',
           value = t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
             {
               defendantFullName: claim.response.defendant.name,
-              paymentDate: draft.courtOfferedPaymentIntention.paymentDate | date
+              paymentDate: paymentIntention.paymentDate | date
             }),
           bottomBorder = true, bold = true,
           changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
         ) }}
         {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.paymentDate | date,
+          value = paymentIntention.paymentDate | date,
           bottomBorder = true, bold = true
         ) }}
-      {% elseif draft.courtOfferedPaymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
+      {% elseif paymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
         {{ row(label = 'The agreement',
           value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
             { defendantFullName: claim.response.defendant.name,
-              instalmentAmount: draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
-              paymentSchedule: draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-              firstPaymentDate: draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date
+              instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
+              paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+              firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
             }),
           bottomBorder = true, bold = true,
           changeLink = ClaimantResponsePaths.signSettlementAgreementPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
         ) }}
         {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.repaymentPlan.completionDate | date,
+          value = paymentIntention.repaymentPlan.completionDate | date,
           bottomBorder = true, bold = true
         ) }}
       {% endif %}
