--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
@@ -8,67 +8,77 @@
 {% endmacro %}
 
 {% macro admissionByCCJDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-  <p>{{ t('{{ claimantName }} accepted your repayment plan and requested a CCJ against you.',
-      { claimantName: claim.claimData.claimant.name }) }}</p>
-  <p>{{ t('If a defendant doesn’t pay immediately, claimants can request a CCJ even if they accept a repayment plan.') }}</p>
-  <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
+    <p>{{ t('{{ claimantName }} accepted your repayment plan and requested a CCJ against you.',
+        { claimantName: claim.claimData.claimant.name }) }}</p>
+    <p>{{ t('If a defendant doesn’t pay immediately, claimants can request a CCJ even if they accept a repayment plan.') }}</p>
+    <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
 
-  {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+  </div>
 {% endmacro %}
 
 {% macro admissionByCCJAfterPayImmediatelyDeadlineClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
     {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
       <p>{{ t('You agreed to pay the full {{ amount }} immediately.', { amount: claim.response.amount }) }}</p>
-    {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
       <p>{{ t('{{ claimantName }} accepted your offer to pay {{ partAdmitAmount }} immediately.',
           { claimantName: claim.claimData.claimant.name, partAdmitAmount: claim.response.amount }) }}</p>
     {% endif %}
-  <p>{{ t('Because you didn’t pay within 5 days, they requested a CCJ against you.') }}</p>
+    <p>{{ t('Because you didn’t pay within 5 days, they requested a CCJ against you.') }}</p>
 
-  {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+  </div>
 {% endmacro %}
 
 {% macro CCJAfterBreakingSettlementAgreementClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-  <p>{{ t('Because you didn’t pay on time or didn’t pay the correct amount, they requested a CCJ against you.') }}</p>
-  <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
+    <p>{{ t('Because you didn’t pay on time or didn’t pay the correct amount, they requested a CCJ against you.') }}</p>
+    <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
 
-  {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+  </div>
 {% endmacro %}
 
 {% macro CCJAfterDefendantDidNotSignSettlementAgreementClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-  {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-    {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-  {% endif %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
+    {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
+      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+    {% endif %}
 
-  <p>{{ t('{{ claimantName }} accepted your repayment plan.', { claimantName: claim.claimData.claimant.name }) }}</p>
-  <p>{{ t('They asked you to sign a settlement agreement. Because you didn’t sign it, they requested a CCJ against you.') }}</p>
-  <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
+    <p>{{ t('{{ claimantName }} accepted your repayment plan.', { claimantName: claim.claimData.claimant.name }) }}</p>
+    <p>{{ t('They asked you to sign a settlement agreement. Because you didn’t sign it, they requested a CCJ against you.') }}</p>
+    <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
 
-  {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+  </div>
 {% endmacro %}
 
 
 {% macro CCJByDeterminationDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-  {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-    <p>{{ t('{{ claimantName }} rejected your repayment plan and requested a CCJ against you.', { claimantName: claim.claimData.claimant.name }) }}</p>
-  {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-    <p>{{ t('{{ claimantName }} accepted your offer to pay {{ partAdmitAmount }}. They rejected your repayment plan and requested a CCJ against you.',
-        { claimantName: claim.claimData.claimant.name, partAdmitAmount: claim.response.amount }) }}</p>
-  {% endif %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
+    {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
+      <p>{{ t('{{ claimantName }} rejected your repayment plan and requested a CCJ against you.', { claimantName: claim.claimData.claimant.name }) }}</p>
+      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+      <p>{{ t('{{ claimantName }} accepted your offer to pay {{ partAdmitAmount }}. They rejected your repayment plan and requested a CCJ against you.',
+          { claimantName: claim.claimData.claimant.name, partAdmitAmount: claim.response.amount }) }}</p>
+    {% endif %}
 
-  {% if acceptedByCourt %}
-    <p>{{ t('They suggested a new repayment plan. The court believes you can afford the claimant’s plan, based on the financial details you provided.') }}</p>
-  {% elif courtOffered %}
-    <p>{{ t('They accepted a new repayment plan determined by the court, based on the financial details you provided.') }}</p>
-  {% endif %}
-  <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
+    {% if acceptedByCourt %}
+      <p>{{ t('They suggested a new repayment plan. The court believes you can afford the claimant’s plan, based on the financial details you provided.') }}</p>
+      {% elif courtOffered %}
+      <p>{{ t('They accepted a new repayment plan determined by the court, based on the financial details you provided.') }}</p>
+    {% endif %}
+    <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
 
-  {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
+  </div>
 {% endmacro %}
 
 {% macro admissionByCCJCommonInfoClaimDetails(claim) %}
