--- a/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
@@ -6,14 +6,12 @@
 {% endmacro %}
 
 {% macro ccjRequestedForClaimantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('You’ve requested a County Court Judgment (CCJ)') }}</h2>
-  <p>
-    {{ t('We’ll contact you within 14 days to tell you whether the judgment has been entered.') }}
-  </p>
-  <p>
-    {{ t('{{ defendantName }} can no longer respond to your claim using this service - they may have responded by post.',
-      { defendantName: claim.claimData.defendant.name }) }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('You’ve requested a County Court Judgment (CCJ)') }}</h2>
+    <p>{{ t('We’ll contact you within 14 days to tell you whether the judgment has been entered.') }}</p>
+    <p>{{ t('{{ defendantName }} can no longer respond to your claim using this service - they may have responded by post.',
+        { defendantName: claim.claimData.defendant.name }) }}</p>
+  </div>
 {% endmacro %}
 
 {% macro ccjRequestedForDefendantDashboard(claim) %}
@@ -22,21 +20,15 @@
 {% endmacro %}
 
 {% macro ccjRequestedForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('The claimant has requested a CCJ against you') }}</h2>
-  <p>
-    {{ t('You didn’t respond to this claim by the deadline of {{ responseDeadline }}.',
-      { responseDeadline: claim.responseDeadline | date }) }}
-  </p>
-  <p>
-    {{ t('{{ claimantName }} requested a default County Court Judgment (CCJ) against you on {{ ccjRequestedAt }}. '
-      + 'We’ll contact you within 14 days to tell you whether the claimant’s request for judgment has been successful.',
-      { claimantName : claim.claimData.claimant.name,
-      ccjRequestedAt: claim.countyCourtJudgmentRequestedAt | date }) }}
-  </p>
-  <p>
-    {{ t('You can no longer respond to the claim.') }}
-  </p>
-  <p>
-    {{ externalLink(t('Find out more about County Court Judgments'), 'https://www.gov.uk/county-court-judgments-ccj-for-debt') }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('The claimant has requested a CCJ against you') }}</h2>
+    <p>{{ t('You didn’t respond to this claim by the deadline of {{ responseDeadline }}.',
+        { responseDeadline: claim.responseDeadline | date }) }}</p>
+    <p>{{ t('{{ claimantName }} requested a default County Court Judgment (CCJ) against you on {{ ccjRequestedAt }}. '
+        + 'We’ll contact you within 14 days to tell you whether the claimant’s request for judgment has been successful.',
+        { claimantName : claim.claimData.claimant.name,
+          ccjRequestedAt: claim.countyCourtJudgmentRequestedAt | date }) }}</p>
+    <p>{{ t('You can no longer respond to the claim.') }}</p>
+    <p>{{ externalLink(t('Find out more about County Court Judgments'), 'https://www.gov.uk/county-court-judgments-ccj-for-debt') }}</p>
+  </div>
 {% endmacro %}
