--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
@@ -16,46 +16,39 @@
 {% endmacro %}
 
 {% macro claimFullAdmissionForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
-  {% set claimantName = claim.claimData.claimant.name %}
-  {% set amount = claim.totalAmountTillToday | numeral %}
-  {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+    {% set claimantName = claim.claimData.claimant.name %}
+    {% set amount = claim.totalAmountTillToday | numeral %}
+    {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
 
-  {% if claim.response.paymentIntention.paymentDate %}
-    {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
-  {% endif %}
+    {% if claim.response.paymentIntention.paymentDate %}
+      {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
+    {% endif %}
 
-  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    <p>{{ t('You said you’ll pay {{ claimantName }} {{ amount }} before 4pm on {{ paymentDate }}.',
-        { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }}</p>
-    <p>{{ t('If you pay by cheque or transfer the money must be clear in their account.') }}</p>
-    <p>{{ t('If they don’t receive the money by then, they can request a County Court Judgment against you.') }}</p>
-    <p>
-      {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
-      {{ t('if you need their payment details. Make sure you get receipts for any payments.') }}
-    </p>
+    {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+      <p>{{ t('You said you’ll pay {{ claimantName }} {{ amount }} before 4pm on {{ paymentDate }}.',
+          { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }}</p>
+      <p>{{ t('If you pay by cheque or transfer the money must be clear in their account.') }}</p>
+      <p>{{ t('If they don’t receive the money by then, they can request a County Court Judgment against you.') }}</p>
+      <p>{{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
+        {{ t('if you need their payment details. Make sure you get receipts for any payments.') }}</p>
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      <p>{{ t('You’ve offered to pay {{ claimantName }} {{ amount }} on {{ paymentDate }}.',
+          { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }}</p>
+      <p>{{ t('We’ll contact you when they respond.') }}</p>
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+      {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
+      {% set repaymentDate = repaymentPlan.firstPaymentDate | date %}
+      {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
+      {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
 
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} on {{ paymentDate }}.',
-        { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }} </p>
-    <p>
-      {{ t('We’ll contact you when they respond.') }}
-    </p>
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
-    {% set repaymentDate = repaymentPlan.firstPaymentDate | date %}
-    {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule | lower) %}
-    {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
-
-    <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} {{ paymentSchedule }} starting {{ repaymentDate }}.',
-        { claimantName: claimantName, amount: installmentAmount, paymentSchedule: paymentSchedule, repaymentDate: repaymentDate }) }} </p>
-    <p>
-      {{ t('We’ll contact you when they respond.') }}
-    </p>
-  {% endif %}
-  <p>
-    {{ downloadResponseLink(claim) }}
-  </p>
+      <p>{{ t('You’ve offered to pay {{ claimantName }} {{ amount }} {{ paymentSchedule }} starting {{ repaymentDate }}.',
+          { claimantName: claimantName, amount: installmentAmount, paymentSchedule: paymentSchedule, repaymentDate: repaymentDate }) }}</p>
+      <p>{{ t('We’ll contact you when they respond.') }}</p>
+    {% endif %}
+    <p>{{ downloadResponseLink(claim) }}</p>
+  </div>
 {% endmacro %}
 
 
