--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
@@ -6,16 +6,14 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedAlreadyPaidForClaimantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
-  <p>
-    {{ t('{{ defendantName }} says they paid you {{ amount }} on {{ paymentDate }}.',
-      { defendantName: claim.claimData.defendant.name, amount: claim.response.amount | numeral, paymentDate: claim.response.paymentDeclaration.paidDate | date }) }}
-  </p>
-  <p> {{ t('You can accept or reject this response.') }}</p>
-  <p>
-    {{ t('You need to respond before 4pm on {{ respondDate }} or your claim won’t proceed.', { respondDate: claim.respondToResponseDeadline | date }) }}
-  </p>
-  {{ viewAndRespondOffer(claim, 'Respond') }}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
+    <p>{{ t('{{ defendantName }} says they paid you {{ amount }} on {{ paymentDate }}.',
+        { defendantName: claim.claimData.defendant.name, amount: claim.response.amount | numeral, paymentDate: claim.response.paymentDeclaration.paidDate | date }) }}</p>
+    <p>{{ t('You can accept or reject this response.') }}</p>
+    <p>{{ t('You need to respond before 4pm on {{ respondDate }} or your claim won’t proceed.', { respondDate: claim.respondToResponseDeadline | date }) }}</p>
+    {{ viewAndRespondOffer(claim, 'Respond') }}
+  </div>
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForClaimantDashboard(claim) %}
@@ -24,20 +22,21 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForClaimantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('The defendant has admitted they owe {{ amount }} ', { amount: claim.response.amount | numeral }) }}</h2>
 
-  <h2 class="heading-small">{{ t('The defendant has admitted they owe {{ amount }} ', { amount: claim.response.amount | numeral }) }}</h2>
+    {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+      <p>{{ t('They said they don’t owe the full amount you claimed.') }}</p>
+      <p>{{ t('They’ve offered to pay the {{ amount }} immediately.', { amount: claim.response.amount | numeral }) }}</p>
+      <p>{{ t('They must make sure you have the money by {{ paymentDate }}. Any cheques or transfers should be clear in your account.',
+          { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      <p>{{ t('They’ve offered to pay by {{ paymentDate }}.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+      <p>{{ t('They’ve offered to pay in instalments.') }}</p>
+    {% endif %}
 
-  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    <p>{{ t('They said they don’t owe the full amount you claimed.') }}</p>
-    <p>{{ t('They’ve offered to pay the {{ amount }} immediately.', { amount: claim.response.amount | numeral }) }}</p>
-    <p>{{ t('They must make sure you have the money by {{ paymentDate }}. Any cheques or transfers should be clear in your account.',
-        { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    <p>{{ t('They’ve offered to pay by {{ paymentDate }}.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    <p>{{ t('They’ve offered to pay in instalments.') }}</p>
-  {% endif %}
-
-  <p>{{ t('You can accept or reject their admission.') }}</p>
-  {{ viewAndRespondOffer(claim, 'View and respond') }}
+    <p>{{ t('You can accept or reject their admission.') }}</p>
+    {{ viewAndRespondOffer(claim, 'View and respond') }}
+  </div>
 {% endmacro %}
