--- a/src/main/features/dashboard/views/macro/claimStatus/moreTimeRequested.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/moreTimeRequested.njk
@@ -6,11 +6,11 @@
 {% endmacro %}
 
 {% macro moreTimeRequestedForClaimantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('The defendant has requested more time to respond') }}</h2>
-  <p>
-    {{ t('{{ defendantName }} has requested an extra 14 days to respond. They need to respond by {{ responseDeadline }}.',
-      { defendantName: claim.claimData.defendant.name, responseDeadline: claim.responseDeadline | date }) | safe }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('The defendant has requested more time to respond') }}</h2>
+    <p>{{ t('{{ defendantName }} has requested an extra 14 days to respond. They need to respond by {{ responseDeadline }}.',
+        { defendantName: claim.claimData.defendant.name, responseDeadline: claim.responseDeadline | date }) | safe }}</p>
+  </div>
 {% endmacro %}
 
 {% macro moreTimeRequestedForDefendantDashboard(claim) %}
@@ -19,14 +19,13 @@
 {% endmacro %}
 
 {% macro moreTimeRequestedForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('More time requested') }}</h2>
-  <p>
-    {{ t('You need to respond before 4pm on {{ responseDeadline }} {{ remainingTime }}.',
-      { responseDeadline: claim.responseDeadline | date, remainingTime: timeRemaining(claim.remainingDays, isAfter4pm()) }) | safe }}
-  </p>
-  <p>
-    {{ _respondToClaimLink(claim) }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('More time requested') }}</h2>
+    <p>{{ t('You need to respond before 4pm on {{ responseDeadline }} {{ remainingTime }}.',
+        { responseDeadline: claim.responseDeadline | date, remainingTime: timeRemaining(claim.remainingDays, isAfter4pm()) }) | safe }}</p>
+    <p>{{ _respondToClaimLink(claim) }}</p>
+  </div>
+
 {% endmacro %}
 
 {% macro _respondToClaimLink(claim) %}
