--- a/src/main/features/dashboard/views/macro/claimStatus/noReponse.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/noReponse.njk
@@ -5,11 +5,11 @@
 {% endmacro %}
 
 {% macro noResponseForClaimantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('Your claim has been sent') }}</h2>
-  <p>
-    {{ t('{{ defendantName }} has until {{ responseDeadline }} to respond. They can request an extra 14 days if they need it.',
-      { defendantName: claim.claimData.defendant.name, responseDeadline: claim.responseDeadline | date }) }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Your claim has been sent') }}</h2>
+    <p>{{ t('{{ defendantName }} has until {{ responseDeadline }} to respond. They can request an extra 14 days if they need it.',
+        { defendantName: claim.claimData.defendant.name, responseDeadline: claim.responseDeadline | date }) }}</p>
+  </div>
 {% endmacro %}
 
 {% macro noResponseForDefendantDashboard(claim) %}
@@ -20,14 +20,12 @@
 {% endmacro %}
 
 {% macro noResponseForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('You haven’t responded to this claim') }}</h2>
-  <p>
-    {{ t('You need to respond before 4pm on {{ responseDeadline }} {{ remainingTime }}.',
-      { responseDeadline: claim.responseDeadline | date, remainingTime: timeRemaining(claim.remainingDays, isAfter4pm()) | trim }) | safe }}
-  </p>
-  <p>
-    {{ _respondToClaimLink(claim) }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('You haven’t responded to this claim') }}</h2>
+    <p>{{ t('You need to respond before 4pm on {{ responseDeadline }} {{ remainingTime }}.',
+        { responseDeadline: claim.responseDeadline | date, remainingTime: timeRemaining(claim.remainingDays, isAfter4pm()) | trim }) | safe }}</p>
+    <p>{{ _respondToClaimLink(claim) }}</p>
+  </div>
 {% endmacro %}
 
 {% macro _respondToClaimLink(claim) %}
