--- a/src/main/features/dashboard/views/macro/claimStatus/offerSubmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSubmitted.njk
@@ -7,32 +7,27 @@
 {% endmacro %}
 
 {% macro offerSubmittedForClaimantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('Settle out of court') }}</h2>
-  <p>
-    {{ t('{{ defendantName }} has made an offer to settle out of court.',
-      { defendantName: claim.claimData.defendant.name }) }}
-  </p>
-  <p>
-    {{ _viewAndRespondToOfferLink(claim) }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Settle out of court') }}</h2>
+    <p>{{ t('{{ defendantName }} has made an offer to settle out of court.',
+        { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ _viewAndRespondToOfferLink(claim) }}</p>
+  </div>
+
 {% endmacro %}
 
 {% macro offerSubmittedForDefendantDashboard() %}
-  <p>
-    {{ t('We’ve sent your offer to the claimant.') }}
-  </p>
+  <p>{{ t('We’ve sent your offer to the claimant.') }}</p>
   {{ t('You have rejected the claim.') }}
 {% endmacro %}
 
 {% macro offerSubmittedForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('Settle out of court') }}</h2>
-  <p>
-    {{ t('You made an offer to settle the claim out of court. {{ claimantName }} can accept or reject your offer.',
-      { claimantName: claim.claimData.claimant.name }) }}
-  </p>
-  <p>
-    {{ t('We’ll email you when they respond.') }}
-  </p>
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Settle out of court') }}</h2>
+    <p>{{ t('You made an offer to settle the claim out of court. {{ claimantName }} can accept or reject your offer.',
+        { claimantName: claim.claimData.claimant.name }) }}</p>
+    <p>{{ t('We’ll email you when they respond.') }}</p>
+  </div>
 {% endmacro %}
 
 {% macro _viewAndRespondToOfferLink(claim) %}
