changed display message from 'no bank account' to the generic one 'None' whne no bank details provided

--- a/src/main/features/response/views/statement-of-means/check-and-send.njk
+++ b/src/main/features/response/views/statement-of-means/check-and-send.njk
@@ -42,7 +42,7 @@
 {{ tableStart('statementOfMeans', 'Your financial details') }}
 
 {% set numberOfBankAccounts = draft.statementOfMeans.bankAccounts.getPopulatedRowsOnly().length %}
-{{ row('Bank and savings accounts', 'No bank account' if numberOfBankAccounts === 0, StatementOfMeansPaths.bankAccountsPage.evaluateUri({ externalId: claim.externalId }), not numberOfBankAccounts, bold = true) }}
+{{ row('Bank and savings accounts', 'None' if numberOfBankAccounts === 0, StatementOfMeansPaths.bankAccountsPage.evaluateUri({ externalId: claim.externalId }), not numberOfBankAccounts, bold = true) }}
 {% set indexOfLastRow = numberOfBankAccounts - 1 %}
 
 {% for account in draft.statementOfMeans.bankAccounts.getPopulatedRowsOnly() %}
